[tool.poetry]
name = "TopFeature"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
networkx = "^3.3"
fastapi = "^0.111.0"
redis = "^5.0.4"
dill = "^0.3.8"
pytest = "^8.2.1"
tk = "^0.1.0"
pytest-cov = "^5.0.0"
pytest-json = "^0.4.0"
pytest-json-report = "^1.5.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.5.3"
toml = "^0.10.2"
pytest-cov = "^5.0.0"
pytest-async = "^0.1.1"
flake8 = "^7.0.0"
black = "^24.4.2"
mypy = "^1.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
